2 тестовый коммит с веб сервера

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <li><a href="index.html">Главная</a></li>
     <li><a href="table.html">Табличка</a></li>
     <li><a href="form.html">Форма</a></li>
+    <li><a href="less3.php">ПЫХА</a></li>
 </ul>
 
 <h1>Что нужно знать, чтобы делать сайт</h1>
