--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <li><a href="table.html">Табличка</a></li> |
     <li><a href="form.html">Форма</a></li> |
     <li><a href="php.php">ПЫХА</a></li> |
+    <li><a href="home.php">Домашка</a></li> |
 </ul>
 
 <h1>Что нужно знать, чтобы делать сайт</h1>
